buildscript {
    repositories {
        jcenter()
    }
}

plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
}

allprojects {
    repositories {
        jcenter()
    }
}

group 'com.epam.epm-jbmp'
version '1.0-SNAPSHOT'

sourceCompatibility = 15
targetCompatibility = 15

subprojects {
    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        dependencies {
            dependencySet(group: 'org.apache.commons', version: '3.11') {
                entry 'commons-lang3'
            }
        }
    }
}
